# wolfram-cli

./: .envrc  Cargo.toml  README.md  build.rs  cspell.json  install.sh
.github/workflows/: release.yml
build_tools/: build.rs  generate-kernel-data.ts
build_tools/wl/: builtin_symbols.wl  query_to_output_form.wl
docs/: Architecture.md
installers/: install.ps1  install.sh  install.wls
schemas/: config.schema.json
scripts/: bump  generate-completions  lint  pre-build  tag
src/: cli.rs  commands.rs  completion.rs  editor.rs  frontend.rs  highlighter.rs  interrupt.rs  kernel.rs  main.rs  native_wstp.rs  profiler.rs  repl.rs  tests.rs  theme.rs  tree_sitter_wolfram.rs  wl.rs  wolfram_syntax.rs
src/wl/: evaluate_script_source.wl  evaluate_user_input.wl  options_query.wl  query_to_input_form_line.wl  secondary_link_setup_input.wl  symbol_completion_query.wl  symbol_definition_query.wl  symbol_details_batch_query.wl  to_expression_without_shadowing.wl  wstp_evaluate_input_to_string.wl  wstp_evaluate_user_input.wl
