[dependencies]
anyhow = '1'
crossterm = '0.27'
nu-ansi-term = '0.50'
reedline = '0.32'
wolfram-app-discovery = '0.6.0-alpha.5'
wolfram-expr = '=0.6.0-alpha.5'
wstp = '0.6.0-alpha.5'

    [dependencies.clap]
    features = [ 'derive' ]
    version = '4'

[package]
build = 'build_tools/build.rs'
edition = '2024'
name = 'wolfsh'
version = '0.5.1'