[dependencies]
anyhow = '1'
crossterm = '0.27'
ctrlc = '3'
libc = '0.2'
nu-ansi-term = '0.50'
reedline = '0.32'
serde_json = '1'
wolfram-app-discovery = '0.6.0-alpha.5'
wolfram-expr = '=0.6.0-alpha.5'
wstp = '0.6.0-alpha.5'

    [dependencies.clap]
    features = [ 'derive' ]
    version = '4'

    [dependencies.serde]
    features = [ 'derive' ]
    version = '1'

[package]
build = 'build_tools/build.rs'
edition = '2024'
name = 'wolfish'
version = '0.5.1'
