[dependencies]
anyhow = '1'
crossterm = '0.29'
ctrlc = '3'
libc = '0.2'
nu-ansi-term = '0.50'
serde_json = '1'
wolfram-app-discovery = '0.6.0-alpha.5'
wolfram-expr = '=0.6.0-alpha.5'
wstp = '0.6.0-alpha.5'

    [dependencies.clap]
    features = [ 'derive' ]
    version = '4'

    [dependencies.reedline]
    features = [ 'external_printer' ]
    version = '0.46'

    [dependencies.serde]
    features = [ 'derive' ]
    version = '1'

[package]
build = 'build_tools/build.rs'
edition = '2024'
name = 'wolfie'
version = '0.9.16'

[profile.release]
lto = 'thin'
strip = true